# mcp-dataframe-qa

./: .env.example  .gitignore  LICENSE  README.md  dataframe_qa.yaml  pyproject.toml
data/: listings.csv  zillow_metro_market.README.md
examples/: claude_desktop_config.json  local_chatbot.py  sample_questions.md
scripts/: prepare_zillow_market_data.py  render_readme_demo.py
src/mcp_dataframe_qa/: __init__.py  __main__.py  audit.py  chatbot.py  cli.py  config.py  datasets.py  engine.py  executor.py  llm.py  planner.py  profiling.py  scaffold.py  schemas.py  server.py  validator.py
tests/: conftest.py  test_column_mismatch_warnings.py  test_correlation.py  test_date_operations.py  test_date_parsing.py  test_explode.py  test_guardrails.py  test_llm.py  test_llm_live.py  test_profile.py  test_real_estate_questions.py  test_regroup.py  test_scaffold.py  test_zillow_dataset.py
tests/fixtures/: listings_config.yaml
