[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mcp-dataframe-qa"
version = "0.1.0"
description = "A research-informed MCP server for safe dataframe question answering."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "sindhug" }
]
keywords = ["mcp", "dataframe", "pandas", "table-qa", "llm", "analytics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "mcp>=1.13,<2",
  "pandas>=2.0",
  "pydantic>=2.7",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
parquet = [
  "pyarrow>=15.0",
]

[project.scripts]
mcp-dataframe-qa = "mcp_dataframe_qa.cli:main"
mcp-dataframe-chat = "mcp_dataframe_qa.chatbot:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_dataframe_qa"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
